--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "firebase": "^10.12.3",
     "framer-motion": "^11.2.11",
     "hammerjs": "^2.0.8",
+    "query-string": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
