--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "query-string": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-tinder-card": "^1.6.4",
